addressed some comments
Signed-off-by: Daniel Lehrner <daniel.lehrner@consensys.net>