@@ -26,9 +26,9 @@ import org.hyperledger.besu.plugin.data.TransactionType;
 
 import java.math.BigInteger;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
+import com.google.common.collect.ImmutableMap;
 import org.apache.tuweni.bytes.Bytes;
 
 public class TransactionEncoder {
@@ -38,8 +38,8 @@ public class TransactionEncoder {
     void encode(Transaction transaction, RLPOutput output);
   }
 
-  private static final Map<TransactionType, Encoder> TYPED_TRANSACTION_ENCODERS =
-      Map.of(
+  private static final ImmutableMap<TransactionType, Encoder> TYPED_TRANSACTION_ENCODERS =
+      ImmutableMap.of(
           TransactionType.ACCESS_LIST,
           TransactionEncoder::encodeAccessList,
           TransactionType.EIP1559,
